--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,204 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+  /* box-shadow: 0 0 0 0 rgb(155, 153, 153); */
+
+  /* left */
+}
+.main-container {
+  padding: 4em;
+  font-size: 16px;
+  position: relative;
+}
+.home-list-container {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 20px;
+}
+.inner-container1 {
+  background-color: antiquewhite;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 1px 1px 20px 1px rgb(155, 153, 153);
+  border-radius: 20px;
+  margin: 35px;
+  padding: 15px;
+  position: relative;
+  height: 350px;
+  justify-content: center;
+  /* width: 85%; */
+}
+.inner-container2 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 1px 1px 20px 1px rgb(155, 153, 153);
+  border-radius: 20px;
+  margin: 35px;
+  padding: 15px;
+  position: relative;
+  height: 100px;
+  /* width: 85%; */
+  background-color: antiquewhite;
+  justify-content: center;
+}
+.home-list {
+  list-style: none;
+  position: relative;
+  margin-right: 150px;
+  top: -30%;
+}
+.inner-container2 li {
+  position: relative;
+  /* margin-right: 150px; */
+  top: -20%;
+}
+.inner-container1 li p {
+  font-weight: 600;
+}
+.inner-container2 li p {
+  font-weight: 600;
+}
+.detail-btn-container {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+}
+.detail-btn {
+  background-color: white;
+  width: 120px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 15px;
+  border-radius: 10px;
+  background-color: red;
+  color: white;
+  position: absolute;
+
+  right: 30px;
+  top: 18%;
+}
+
+/* Second Page */
+.view-detail-container {
+  position: absolute;
+  /* position: relative; */
+  height: 240px;
+  left: 160px;
+  margin-top: -75px;
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 10px;
+  width: 60%;
+  box-shadow: 1px 1px 5px 1px rgb(170, 165, 165);
+}
+
+.view-detail-container li {
+  list-style: none;
+  /* margin: 0 80px 0 80px; */
+}
+.viewDetail-component2 {
+  display: none;
+}
+
+@media screen and (max-width: 780px) {
+  .main-container {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(59, 59, 59);
+  }
+
+  .inner-container1 {
+    margin-top: 1px;
+    background-color: rgb(238, 229, 243);
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 8px rgb(124, 124, 124);
+    border-radius: 20px;
+    position: relative;
+    justify-content: center;
+    width: 120%;
+  }
+  .inner-container2 {
+    display: flex;
+    margin-top: 1px;
+    /* justify-content: space-evenly; */
+    align-items: center;
+    box-shadow: 0 0 12px rgb(136, 136, 136);
+    border-radius: 20px;
+    position: relative;
+    width: 120%;
+    background-color: rgb(247, 247, 247);
+    justify-content: center;
+  }
+  .home-list-container {
+    /* display: flex; */
+    justify-content: center;
+    position: absolute;
+    /* border: 1px solid rgb(212, 122, 122); */
+  }
+  .home-list-container li {
+    /* display: flex; */
+    left: 0px;
+    top: 10px;
+    font-size: 11px;
+  }
+  .home-list {
+    margin: 15px;
+    list-style: none;
+    position: relative;
+    top: 0;
+    /* background-color: aquamarine; */
+  }
+  .detail-btn-container {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+  }
+  .detail-btn {
+    background-color: white;
+    width: 70px;
+    height: 25px;
+    font-size: 9px;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
+    position: absolute;
+    right: 2px;
+    top: 18%;
+  }
+
+  /* Second Page */
+  .view-detail-container {
+    position: absolute;
+    height: 250px;
+    left: 30px;
+    margin-top: -80px;
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 10px;
+    width: 85%;
+    box-shadow: 1px 1px 5px 1px rgb(170, 165, 165);
+  }
+
+  .view-detail-container li {
+    list-style: none;
+  }
+  .viewDetail-component2 {
+    display: none;
+  }
 }
